--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 h1 { text-align: center }
-div.canvas { text-align: center }
+div.canvas { margin-left: 50px }
 canvas { border: 5px outset lightgray }
+div.status { width: 1200px; font-size: 110%; font-weight: bold;
+	     margin-left: 5px; margin-top: 2px }
 div.loglabel { font-weight: bold; display: none }
 #log { border: medium inset lightgray; padding-top: 3px; padding-left: 5px;
        width: 600px; min-height: 200px; display: none }
